k8s/mkstack-mediakraken/templates/cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-cron
  name: mkstack-cron
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-cron-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-cron-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkcron
          image: mediakraken/mkcron:dev
          imagePullPolicy: Always
          name: mkstack-cron
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
