k8s/mkstack-mediakraken/templates/globalcache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-globalcache
  name: mkstack-globalcache
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-globalcache-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-globalcache-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkglobalcache
          image: mediakraken/mkglobalcache:dev
          imagePullPolicy: Always
          name: mkstack-globalcache
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
