k8s/mkstack-mediakraken/templates/guessitrest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-guessitrest
  name: mkstack-guessitrest
  namespace: mkstack-mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-guessitrest-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-guessitrest-service
    spec:
      containers:
        - image: mediakraken/mkguessitrest:dev
          imagePullPolicy: Always
          name: mkstack-guessitrest
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
