k8s/mkstack-mediakraken/templates/hardwarecontrol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-hardwarecontrol
  name: mkstack-hardwarecontrol
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-hardwarecontrol-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-hardwarecontrol-service
    spec:
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkhardwarecontrol
          image: mediakraken/mkhardwarecontrol:dev
          imagePullPolicy: Always
          name: mkstack-hardwarecontrol
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
