k8s/mkstack-mediakraken/templates/hardwarescanner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-hardwarescanner
  name: mkstack-hardwarescanner
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-hardwarescanner-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-hardwarescanner-service
    spec:
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkhardwarescanner
          image: mediakraken/mkhardwarescanner:dev
          imagePullPolicy: Always
          name: mkstack-hardwarescanner
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
