k8s/mkstack-mediakraken/templates/inotify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-inotify
  name: mkstack-inotify
  namespace: mkstack-mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-inotify-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-inotify-service
    spec:
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkinotify
          image: mediakraken/mkinotify:dev
          imagePullPolicy: Always
          name: mkstack-inotify
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
