k8s/mkstack-mediakraken/templates/iradio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-iradio
  name: mkstack-iradio
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-iradio-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-iradio-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkiradio
          image: mediakraken/mkiradio:dev
          imagePullPolicy: Always
          name: mkstack-iradio
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
