k8s/mkstack-mediakraken/templates/libretrocorefetchupdate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-libretrocorefetchupdate
  name: mkstack-libretrocorefetchupdate
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-libretrocorefetchupdate-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-libretrocorefetchupdate-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mklibretrocorefetchupdate
          image: mediakraken/mklibretrocorefetchupdate:dev
          imagePullPolicy: Always
          name: mkstack-libretrocorefetchupdate
          volumeMounts:
            - mountPath: /mediakraken/emulation
              name: mkstack-emulation-claim
            - mountPath: /mediakraken/metadata
              name: mkstack-metadata-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mkstack-emulation-claim
          persistentVolumeClaim:
            claimName: mkstack-emulation-claim
        - name: mkstack-metadata-claim
          persistentVolumeClaim:
            claimName: mkstack-metadata-claim
