k8s/mkstack-mediakraken/templates/metadata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-metadata
  name: mkstack-metadata
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-metadata-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-metadata-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkmetadata
          image: mediakraken/mkmetadata:dev
          imagePullPolicy: Always
          name: mkstack-metadata
          volumeMounts:
            - mountPath: /mediakraken/metadata
              name: mkstack-metadata-claim
            - mountPath: /mediakraken/cache
              name: mkstack-cache-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mkstack-metadata-claim
          persistentVolumeClaim:
            claimName: mkstack-metadata-claim
        - name: mkstack-cache-claim
          persistentVolumeClaim:
            claimName: mkstack-cache-claim
