k8s/mkstack-mediakraken/templates/musicbrainz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-musicbrainz
  name: mkstack-musicbrainz
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-musicbrainz-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-musicbrainz-service
    spec:
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkmusicbrainz
          image: mediakraken/mkmusicbrainz:dev
          imagePullPolicy: Always
          name: mkstack-musicbrainz
          volumeMounts:
            - mountPath: /mediakraken/mbdump
              name: mkstack-mbrainz-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mkstack-mbrainz-claim
          persistentVolumeClaim:
            claimName: mkstack-mbrainz-claim
