k8s/mkstack-mediakraken/templates/openlibrarynetfetchbulk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-openlibrarynetfetchbulk
  name: mkstack-openlibrarynetfetchbulk
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-openlibrarynetfetchbulk-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-openlibrarynetfetchbulk-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkopenlibrarynetfetchbulk
          image: mediakraken/mkopenlibrarynetfetchbulk:dev
          imagePullPolicy: Always
          name: mkstack-openlibrarynetfetchbulk
          volumeMounts:
            - mountPath: /mediakraken
              name: mkstack-openlibrary-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mkstack-openlibrary-claim
          persistentVolumeClaim:
            claimName: mkstack-openlibrary-claim
