k8s/mkstack-mediakraken/templates/rabbitconsume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-rabbitconsume
  name: mkstack-rabbitconsume
  namespace: mkstack-mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-rabbitconsume-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-rabbitconsume-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkrabbitconsume
          image: mediakraken/mkrabbitconsume:dev
          imagePullPolicy: Always
          name: mkstack-rabbitconsume
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
