k8s/mkstack-mediakraken/templates/schedulesdirectupdate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-schedulesdirectupdate
  name: mkstack-schedulesdirectupdate
  namespace: mkstack-mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-schedulesdirectupdate-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-schedulesdirectupdate-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mkschedulesdirectupdate
          image: mediakraken/mkschedulesdirectupdate:dev
          imagePullPolicy: Always
          name: mkstack-schedulesdirectupdate
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
