k8s/mkstack-mediakraken/templates/sharescanner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-sharescanner
  name: mkstack-sharescanner
  namespace: mkstack-mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-sharescanner-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-sharescanner-service
    spec:
      containers:
        - args:
            - sh
            - -c
            - /wait && /mksharescanner
          image: mediakraken/mksharescanner:dev
          imagePullPolicy: Always
          name: mkstack-sharescanner
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
