k8s/mkstack-mediakraken/templates/transcode.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-transcode
  name: mkstack-transcode
  namespace: mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-transcode-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-transcode-service
    spec:
      containers:
        - args:
            - sh
            - -c
            - /mktranscode
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: db-password
                  key: db-password
          image: mediakraken/mktranscode:dev
          imagePullPolicy: Always
          name: mkstack-transcode
          volumeMounts:
            - mountPath: /mediakraken/mnt
              name: mkstack-transcode-claim
              readOnly: true
      restartPolicy: OnFailure
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mkstack-transcode-claim
          persistentVolumeClaim:
            claimName: mkstack-transcode-claim
            readOnly: true
