k8s/mkstack-mediakraken/templates/tvheadend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-tvheadend
  name: mkstack-tvheadend
  namespace: mkstack-mediakraken
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mkstack-tvheadend-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-tvheadend-service
    spec:
      containers:
        - args:
            - sh
            - -c
            - /mktvheadend
          image: mediakraken/mktvheadend:dev
          imagePullPolicy: Always
          name: mkstack-tvheadend
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
