k8s/mkstack-mediakraken/templates/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkstack-webapp-service
  namespace: mediakraken
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: mkstack-webapp-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mkstack-webapp
  name: mkstack-webapp
  namespace: mediakraken
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: mkstack-webapp-service
  template:
    metadata:
      labels:
        io.kompose.service: mkstack-webapp-service
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - args:
            - sh
            - -c
            - /wait && /mediakraken/mkwebapp
          image: mediakraken/mkwebaxum:dev
          imagePullPolicy: Always
          name: mkstack-webapp
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /mediakraken/metadata
              name: mkstack-metadata-claim
            - mountPath: /Comics
              name: mkstack-comics-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: mkstack-metadata-claim
          persistentVolumeClaim:
            claimName: mkstack-metadata-claim
        - name: mkstack-comics-claim
          persistentVolumeClaim:
            claimName: mkstack-comics-claim
