k8s/mkstack-mediakraken/templates/webapp-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mkstack-webapp-ingress
  namespace: mediakraken
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cluster"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set_real_ip_from all;
      real_ip_header X-Forwarded-For;
      real_ip_recursive on;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mk.mediakraken.media
      secretName: letsencrypt-webapp-tls
  rules:
    - host: mk.mediakraken.media
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mkstack-webapp-service
                port:
                  number: 8080
